--- a/Lab3ArqSoft-ejb/nbproject/private/private.properties
+++ b/Lab3ArqSoft-ejb/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\cposa\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3354552924.properties
+deploy.ant.properties.file=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv31155342233.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/cposa/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1
-netbeans.user=C:\\Users\\cposa\\AppData\\Roaming\\NetBeans\\8.0.2
+j2ee.server.domain=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GF_4.1_8/domain1
+j2ee.server.home=/usr/local/glassfish-4.1/glassfish
+j2ee.server.instance=[/usr/local/glassfish-4.1/glassfish:/usr/local/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/usr/local/glassfish-4.1
+netbeans.user=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2
