--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv3-2137669408.properties
-j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="/usr/local/glassfish-4.1/glassfish/lib/endorsed":"/usr/local/glassfish-4.1/glassfish/modules/endorsed" -javaagent:"/usr/local/glassfish-4.1/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GF_4.1/domain1/config/glassfish-acc.xml",client=jar=
+deploy.ant.properties.file=C:\\Users\\cposa\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3354552924.properties
+j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Program Files\\glassfish-4.1\\glassfish\\lib\\endorsed";"C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\endorsed" -javaagent:"C:\\Program Files\\glassfish-4.1\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Users\\cposa\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GF_4.1\\domain1\\config\\glassfish-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GF_4.1/domain1
-j2ee.server.home=/usr/local/glassfish-4.1/glassfish
-j2ee.server.instance=[/usr/local/glassfish-4.1/glassfish:/usr/local/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=/usr/local/glassfish-4.1
+j2ee.server.domain=C:/Users/cposa/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
 netbeans.user=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2
 selected.browser=Chrome
-wa.copy.client.jar.from=/export/estudiantes/camilo.posadaa/.netbeans/8.0.2/config/GF_4.1/domain1/generated/xml
+wa.copy.client.jar.from=C:\\Users\\cposa\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GF_4.1\\domain1\\generated\\xml
